<resources>
    <string name="app_name">UxAlarm</string>
    <string name="icon_main">Icon Main</string>
    <string name="entrar_como_invitado">Entrar como Invitado</string>
    <string name="bienvenido_de_nuevo">Bienvenido de Nuevo!!!</string>
    <string name="cargando">Cargando...</string>
    <string name="icono_de_cargando">Icono de cargando</string>
    <string name="texto_boton_cancelar"><u>Cancelar</u></string>
    <string name="mis_alarmas">Mis Alarmas</string>
    <string name="login_v_a_qr">Login Vía QR</string>
    <string name="escanea_el_c_digo_qr_de_la_p_gina_web">Escanea el código QR de la página web</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_alarma_r_pida">Crear Alarma Rápida</string>
    <string name="editar_alarma_r_pida">Editar Alarma Rápida</string>
    <string name="personzalizar_alarma">Personzalizar Alarma</string>
    <string name="guardar">Guardar</string>
    <string name="point_double">:</string>
</resources>