<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_full_small"
    tools:context=".LoaderActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="202dp"
        android:layout_height="82dp"
        android:layout_marginTop="127dp"
        android:text="@string/bienvenido_de_nuevo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/titulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLoader"
        android:layout_width="196dp"
        android:layout_height="160dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/icono_de_cargando"
        android:scrollbarDefaultDelayBeforeFade="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        app:srcCompat="@drawable/loader" />

    <TextView
        android:id="@+id/txtLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/cargando"
        android:textAppearance="@style/etiquetas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLoader" />

</androidx.constraintlayout.widget.ConstraintLayout>