<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_full_small"
    tools:context=".CreateAlarmActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/crear_alarma_r_pida"
        android:textAppearance="@style/titulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/leftButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:foreground="@mipmap/row_left"
        app:backgroundTint="#FFFFFF"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:paddingTop="-10dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:foreground="@drawable/reloj_base" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rightButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:foreground="@mipmap/row_right"
        app:backgroundTint="#FFFFFF"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/btnCustomAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/azul_primario_app"
        android:backgroundTintMode="add"
        android:fontFamily="@font/roboto"
        android:text="@string/personzalizar_alarma"
        android:textAllCaps="false"
        android:textColor="@color/blanco_app"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/azul_primario_app"
        android:text="@string/guardar"
        android:textAppearance="@style/etiquetas"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:lineSpacingExtra="-3sp"
        android:text="@string/texto_boton_cancelar"
        android:textAllCaps="false"
        android:textAppearance="@style/etiquetas_sub"
        android:textColor="@color/Negro_app_80"
        android:textColorHighlight="@color/Negro_app_80"
        app:cornerRadius="100dp"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>